Added OAuth for google and added sign in, tried to fix but commiting so i can try it on my other computer too, might just be a system error because my computer is slow

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ Desktop.ini
 
 meetings.db
 app/speeddial-f2572-firebase-adminsdk-fbsvc-19fdde59c7.json
+app/secret.key
+client_secret_35928354061-dfov330q4s5e2hbejn36srahhv080aid.apps.googleusercontent.com.json
