--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ meetings.db
 app/secret.key
 client_secret_35928354061-dfov330q4s5e2hbejn36srahhv080aid.apps.googleusercontent.com.json
 .env
+speeddialkey.json
